--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,3 +6,15 @@ body {
 	background-image: url('../images/swann_coming_soon_noback.png');
 	background-repeat: no-repeat;
 }
+
+.logo-nav {
+  display: inline-block !important;
+  height: 30px;
+  padding-right: 5px;
+  margin-top: -10px;
+}
+
+.module-subtitle.story {
+  line-height: 300%;
+  margin-bottom: 30px;
+}
