--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1195,9 +1195,10 @@ Team
 	color: #aaa;
 }
 
-.team-item:hover .team-image:after {
-	background: rgba(0, 0, 0, .6);
-}
+/* Uncomment after adding social media back */
+/*.team-item:hover .team-image:after {*/
+	/*background: rgba(0, 0, 0, .6);*/
+/*}*/
 
 .team-item:hover .team-detail {
 	opacity: 1;
