--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -86,3 +86,14 @@ body {
   :-ms-input-placeholder { color: mediumpurple; }
   :-moz-placeholder { color: mediumpurple; }
 }
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  #transform {
+    width: 100%;
+  }
+
+
+}
